fixed left alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
           box-sizing: border-box;
 }
 
+
 html {
   scroll-behavior: smooth;
   overflow: scroll;
@@ -461,12 +462,13 @@ nav a:hover {
 
 .sub-title {
   margin-top: 50px;
+  margin-left: 0px;
   top: 0vh;
   left: 0vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 0px;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
@@ -483,7 +485,9 @@ nav a:hover {
   text-transform: uppercase;
   margin-bottom: 10px;
   margin-right: 20px;
+  text-align: left;
 }
+
 
 .p-quote {
   display: -webkit-box;
@@ -758,17 +762,6 @@ nav a:hover {
   font-size: 1.3rem;
 }
 
-/* .main_img {
-  width: 15rem;
-  height: 20rem;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: 0% 0;
-     object-position: 0% 0;
-  float: left;
-  padding-right: 25px;
-} */
-
 /* Center the image */
 .main_img {
   width: 15rem;
@@ -882,16 +875,25 @@ nav a:hover {
     font-size: 3.5vw;
   }
   .person {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-start;
+    flex-wrap: wrap;
   }
+  
   .inner-person {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; 
+    flex-wrap: wrap;
   }
+
   .p-quote-test {
-    text-align: left;
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.3rem;
+    margin: 0; 
   }
+  
   .LCICM-logo {
     opacity: 1;
     position: absolute;
